syntax = "proto3";

option java_multiple_files = true;

option java_package = "com.ymou.grpc";

service HelloService {
	rpc greet(HelloRequest) returns (HelloResponse);
}

message HelloRequest {
	string name = 1;
	int32 age = 2;
	repeated string hobbies = 3;
	map<string, string> bagOfTricks = 4;
	Sentiment sentiment = 5;
}

message HelloResponse {
	string greeting = 1;
}

enum Sentiment {
	HAPPY = 0;
	ANGRY = 1;
	SLEEPY = 3;
}